[package]
name = "llmterm"
version = "0.2.3"
edition = "2024"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
description = "Your friendly local LLM terminal companion"
repository = "https://github.com/timschmidt/llmterm"
readme = "readme.md"
license = "MIT"

[dependencies]
clap = "4.5.23"
expectrl = "0.7.1"
kalosm = {version = "0.3.2", features=["language", "cuda"]}
tokio = "1.42.0"
